[+] Cache [+] TeamCommand adjustments [+] Bancheck on joining [+] Mutecheck [+] PenaltyRepository [+] MySQL adjustments [+] new Minecraftplayer [+] getNameByUUID / getUUIDByName [+] CloudNet connection

--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,19 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>cloudnet-releases</id>
+            <url>https://repo.cloudnetservice.eu/repository/releases/</url>
+        </repository>
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>de.dytanic.cloudnet</groupId>
+            <artifactId>cloudnet-driver</artifactId>
+            <version>LATEST</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
